--- a/Juno_blast.Rmd
+++ b/Juno_blast.Rmd
@@ -22,6 +22,10 @@ parameters <- list("pipeline_name" = "Juno_blast")
 
 ```
 
+```{r juno-blast-logo, out.width="70%", fig.align = 'center', echo = FALSE, eval = TRUE}
+knitr::include_graphics("figures/juno_logo/juno_light/juno_blast_lightbg.png")
+```
+
 The goal of this pipeline is to perform [BLAST](https://blast.ncbi.nlm.nih.gov/Blast.cgi) in the input file(s) contained in the input directory. The input file should be a (multi) fasta file.  
 
 ## Handbook
